# uvspeed

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install-bsd.sh  install.sh  interactive-test.js  launch-any-platform.sh  launch-complete.sh  launch-hexterm.sh  launch-old.sh  launch-original.sh  launch.sh  package-lock.json  package.json  pyproject.toml  quantum_bridge_server.py  restart-electron.sh  screenshot-tool.js  tsconfig.json  uvspeed_cli.py  uvspeed_hexcast.py  verify-fixes.js
.cursor/rules/: auto-tasks.mdc  chunked-file-writing.mdc  kbatch-expansion-plan.mdc  pre-push-lingo.mdc  prefix-autocomplete.mdc  quantum-commands.mdc  quantum-prefix-gutter.mdc  uvspeed-project-context.mdc  workstation-tools.mdc
.cursor/skills/: quantum-prefix-skill.md
.github/: FUNDING.yml  SPONSORS.md  cliff.toml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  health.yml  pages.yml  release.yml
.windsurf/rules/: quantum-prefix.md
config/: copilot_context.md  copilot_training_context.md
content/: quantum-overlay.css
crates/prefix-engine/: Cargo.toml
crates/prefix-engine/benches/: classify_bench.rs
crates/prefix-engine/src/: ast.rs  lib.rs  simd.rs
docs/: README.md
editors/neovim/lua/quantum-prefixes/: init.lua
editors/vscode/: package.json
editors/vscode/src/: extension.ts
electron-app/: main.js
electron-app/src/: index.html  renderer.js
examples/hello-quantum/: main.py  pyproject.toml
extensions/history-search/: README.md  background.js  content.js  manifest.json  popup.html  styles.css
extensions/history-search/icons/: generate-icons.html
popup/: quantum-popup.js
quantum/: calculator.py  install_quantum_opencode.sh  launch_quantum_terminal.sh  opencode_quantum_terminal.py  opencode_quantum_terminal_clean.py  opencode_quantum_terminal_clean_quantum.py  opencode_quantum_terminal_v2.py  package_quantum.json  quantum_handler.py  quantum_handler_clean.py  quantum_handler_v2.py  quantum_status.py  quantum_status_clean.py
scripts/: audit.nu  build-wasm.sh  build.nu  pre.nu  pre.sh  test.nu  version-sync.sh  watch-dev.sh
shared/config/: copilot_context.md
src/: MANIFEST.md  commands.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  prefix_engine.rs
src/01-core/: mcp_server.py  quantum_bridge_server.py  quantum_bridge_server_v2.py  quantum_notepad.py
src/02-electron/: main.js  preload.js
src/02-electron/src/: index.html  index_broken.html
src/03-tools/: build-multi-platform.sh  install-bsd.sh  launch-progressive.sh  launch-quantum-notepad.sh  launch-web-gui.sh  launch.sh  prototype.sh  status.sh
src/04-tests/: test-4-features.js  test-full-panel.js  test-github-pages.js  test-inspect-panel.js  test-prefix-roadmap.js  test-sow-benchmark.js  test-sow-bottom-fixed.js
src/05-examples/hello-quantum-project/hello-quantum/: main.py  pyproject.toml
src/06-extensions/: cursor-theme.css  manifest.json
src/06-extensions/background/: quantum-service-worker.js
src/06-extensions/content/: quantum-inject.js
src/06-extensions/popup/: quantum-popup.html
src/07-archive/: PROTOTYPE.md  quantum_notebook_demo.json
src/07-archive/quantum/: calculator.py  install_quantum_opencode.sh  quantum_handler_clean.py  quantum_handler_v2.py  quantum_status.py
src/07-archive/shared/config/: copilot_training_context.md  quantum.env
src/07-archive/versions/v2-terminal/: launch.sh
src/07-archive/versions/v3-complete/: launch.sh  launch_quantum_terminal.sh  opencode_quantum_terminal.py  opencode_quantum_terminal_clean.py  opencode_quantum_terminal_v2.py
src/bridge/: go.mod  main.go
src/m1-tests/: test-mermaid-features.js
src/mn-deps/: pyproject.toml
src/n-entry/: launch-enhanced.sh
src/p0-core/: quantum_prototype.py
src/p1-docs/: README-progressive.md  README.md  layout-info.json
src/pn-platforms/: build-firefox.sh
src/shaders/: prefix-classify.wgsl
tools/: copilot-quantum  disk-audit.md  hexcast  prefix_all_files.py  setup-workstation.sh  workstation-manifest.json
versions/v1-core/: launch.sh  quantum_handler_core.py
versions/v3-complete/: opencode_quantum_terminal_clean_quantum.py  package.json  quantum_handler.py  quantum_status_clean.py
versions/v3-complete/shared/docs/: README.md
web/: archflow.html  blackwell.html  brothernumsy.html  enhanced-p2p-terminal.css  enhanced-p2p-terminal.html  feed.html  freya-landing.html  freya.html  github-dashboard.html  grid.html  hexbench.html  hexcast-send.html  hexcast.html  history-search-engine.d.ts  history-search-engine.js  history.html  jawta-audio.html  kbatch.html  launcher.html  manifest.json  numsy.html  quantum-claude-terminal.css  quantum-claude-terminal.html  quantum-gutter.html  quantum-notepad.html  quantum-prefixes.d.ts  quantum-prefixes.js  quantum-theme.css  questcast.html  research-lab.html  search.html  sponsor.html  sw.js  terminal-manifest.json  terminal.html  wasm-loader.ts
web/legacy/: enhanced-p2p-terminal.js  quantum-claude-terminal.js
