# beyondBINARY quantum-prefixed | uvspeed | {+1, 1, -1, +0, 0, -0, +n, n, -n}

[project]
name = "uvspeed-quantum"
version = "4.0.0"
description = "beyondBINARY quantum-prefixed development platform — terminal emulator, video streaming, keyboard heatmap, multi-stream grid, 20-language prefix system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "fornevercollective"}
]
keywords = [
    "quantum", "prefix", "beyondbinary", "code-architecture",
    "tinygrad", "ai", "llm", "notebook", "developer-tools",
    "brothernumsy", "kbatch", "hexcast", "freyaunits"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "websockets>=12.0",
    "opencv-python-headless>=4.9",
    "numpy>=1.24",
    "zeroconf>=0.131",
    "Pillow>=9.0",
]

[project.optional-dependencies]
lite = [
    "websockets>=12.0",
    "Pillow>=9.0",
    "zeroconf>=0.131",
]
full = [
    "websockets>=12.0",
    "psutil>=5.9",
    "numpy>=1.24",
    "opencv-python-headless>=4.9",
    "Pillow>=9.0",
    "aiohttp>=3.9",
    "zeroconf>=0.131",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://fornevercollective.github.io/uvspeed/web/quantum-notepad.html"
Repository = "https://github.com/fornevercollective/uvspeed"
Documentation = "https://github.com/fornevercollective/uvspeed#readme"
Issues = "https://github.com/fornevercollective/uvspeed/issues"

[project.scripts]
uvspeed-bridge = "uvspeed_cli:main"
hexcast = "uvspeed_hexcast:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.uvspeed]
# UV-Speed Quantum Configuration
quantum_mode = true
architecture = "Zig→Rust→Semantic→Visual"
navigation_system = "3d_spatial"

[tool.uvspeed.quantum]
# Quantum numbering prefixes
entry_points = "n:"
comments = "+1:"
imports = "-n:"
classes = "+0:"
functions = "0:"
error_handling = "-1:"
conditionals = "+n:"
loops = "+2:"
returns = "-0:"
output = "+3:"

[tool.uvspeed.tools]
# Portable tool configuration
uv_enabled = true
nushell_portable = true
opencode_ai = true
grepai_semantic = true

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    "src/",
    "__pycache__",
    ".venv",
    "dist",
    "tools/",
    "uvspeed_quantum.egg-info",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["uvspeed_cli", "uvspeed_hexcast"]

[tool.setuptools.packages.find]
where = ["."]
include = ["uvspeed*"]
