[package]
name = "uvspeed"
version = "4.0.0"
description = "beyondBINARY quantum-prefixed code architecture"
authors = ["ForNeverCollective"]
license = "MIT"
repository = "https://github.com/ForNeverCollective/uvspeed"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Quantum prefix engine — Rust-native classifier
uvspeed-prefix-engine = { path = "../crates/prefix-engine" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
