[package]
name = "uvspeed-prefix-engine"
version = "3.5.0"
edition = "2021"
description = "beyondBINARY quantum prefix classifier — 9-symbol directional code addressing"
authors = ["ForNeverCollective"]
license = "MIT"
repository = "https://github.com/ForNeverCollective/uvspeed"
keywords = ["prefix", "classifier", "quantum", "code-analysis", "wasm"]
categories = ["development-tools", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = []
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "classify_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
