[package]
name = "uvspeed-prefix-engine"
version = "3.5.0"
edition = "2021"
description = "beyondBINARY quantum prefix classifier — 11-symbol directional code addressing"
authors = ["ForNeverCollective"]
license = "MIT"
repository = "https://github.com/ForNeverCollective/uvspeed"
keywords = ["prefix", "classifier", "quantum", "code-analysis", "wasm"]
categories = ["development-tools", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = []
wasm = ["wasm-bindgen", "js-sys"]
ast = ["tree-sitter", "tree-sitter-python", "tree-sitter-javascript", "tree-sitter-rust", "tree-sitter-go", "tree-sitter-c", "tree-sitter-typescript"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASM-only dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# AST-backed classification (tree-sitter)
tree-sitter = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "classify_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# wasm-pack: wasm-opt requires bulk-memory flag for Rust 1.82+
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
